--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/node": "^22.6.1",
-    "nodemon": "^3.1.7",
-    "prisma": "^5.19.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "@types/node": "^22.6.1"
   }
 }
